# sharepoint-to-text

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
sharepoint2text/: __init__.py  cli.py  exceptions.py  mime_types.py  router.py
sharepoint2text/extractors/: abstract_extractor.py  data_types.py  doc_extractor.py  docx_extractor.py  epub_extractor.py  html_extractor.py  pdf_extractor.py  plain_extractor.py  ppt_extractor.py  pptx_extractor.py  rtf_extractor.py  serialization.py  xls_extractor.py  xlsx_extractor.py
sharepoint2text/extractors/mail/: eml_email_extractor.py  mbox_email_extractor.py  msg_email_extractor.py
sharepoint2text/extractors/ms_legacy/: doc_extractor.py  ppt_extractor.py  rtf_extractor.py  xls_extractor.py
sharepoint2text/extractors/ms_modern/: __init__.py  docx_extractor.py  pptx_extractor.py  xlsx_extractor.py
sharepoint2text/extractors/open_office/: odp_extractor.py  ods_extractor.py  odt_extractor.py
sharepoint2text/extractors/util/: encryption.py  image_utils.py  zip_bomb.py  zip_context.py
sharepoint2text/ms_doc/: doc_extractor.py
sharepoint2text/parsing/: mime_types.py  router.py
sharepoint2text/parsing/extractors/: archive_extractor.py  data_types.py  html_extractor.py  plain_extractor.py
sharepoint2text/parsing/extractors/ms_modern/: pptx_extractor.py
sharepoint2text/parsing/extractors/open_office/: odp_extractor.py  ods_extractor.py  odt_extractor.py
sharepoint2text/parsing/extractors/pdf/: pdf_extractor.py
sharepoint2text/parsing/extractors/util/: sevenzip.py
sharepoint2text/sharepoint_io/: run_test_setup.py
sharepoint2text/tests/: test_cli.py  test_extractions.py  test_integration.py  test_router.py  test_serialization.py  test_sharepoint_io.py  test_zip_bomb.py
sharepoint2text/tests/resources/: plain.csv  sample.html  sample_with_comment_and_table.docx
sharepoint2text/tests/resources/archives/: test_archive.tar
sharepoint2text/tests/resources/epub/: BJNR274910013.epub  sample.epub
sharepoint2text/tests/resources/html/: large_complex.html  sample.mhtml
sharepoint2text/tests/resources/legacy_ms/: 02_dept_transport.rtf  2025.144.un.rtf  CULT-OJ-2024-10-03-1_DE.rtf  Speech_Prime_Minister_of_The_Netherlands_EN.doc  eurouni2.ppt  headings.doc  mwe.xls  pb_2011_1_gen_web.xls
sharepoint2text/tests/resources/legacy_ms/password_protected/: doc-password-protected-pw123.doc  docx-password-protected-pw123.docx  odp-password-protected-pw123.odp  ods-password-protected-pw123.ods  odt-password-protected-pw123.odt  pptx-password-protected-pw123.pptx  xls-password-protected-pw123.xls  xslx-password-protected-pw123.xlsx
sharepoint2text/tests/resources/mails/: basic_email.eml  basic_email.mbox
sharepoint2text/tests/resources/modern_ms/: Country_Codes_and_Names.xlsx  GKIM_Skills_Framework_-_static.docx  empty_row_columns.ods  empty_row_columns.xlsx  eu-visibility_rules_00704232-AF9F-1A18-BD782C469454ADAD_68401.pptx  image_in_excel.xlsx  mwe.xlsx  pptx_formula_image.pptx  sample.docm  sample.pptm
sharepoint2text/tests/resources/open_office/: headings.odt  odp_with_table.odp
sharepoint2text/tests/resources/plain_text/: document.md  plain.tsv
